--- a/SupermarketManagement.WebApp/_Imports.razor
+++ b/SupermarketManagement.WebApp/_Imports.razor
@@ -12,3 +12,4 @@
 @using SupermarketManagement.WebApp.Shared
 @using SupermarketManagement.Entities
 @using SupermarketManagement.UseCases.UseCasesInterfaces
+@using SupermarketManagement.WebApp.Pages.Shared
