--- a/SupermarketManagement.WebApp/Pages/AddCategory.razor
+++ b/SupermarketManagement.WebApp/Pages/AddCategory.razor
@@ -1,4 +1,5 @@
 ﻿@page "/AddCategory"
+@attribute [Authorize(Policy = "AdminOnly")]
 
 @inject IAddCategoryUseCase AddCategoryUseCase
 @inject NavigationManager NavigationManager
