--- a/SupermarketManagement.WebApp/Pages/EditCategory.razor
+++ b/SupermarketManagement.WebApp/Pages/EditCategory.razor
@@ -1,4 +1,5 @@
 ﻿@page "/EditCategory/{CategoryId:int}"
+@attribute [Authorize(Policy = "AdminOnly")]
 
 @inject NavigationManager NavigationManager
 @inject IGetCategoryByIdUseCase GetCategoryByIdUseCase
