--- a/SupermarketManagement.WebApp/PageComponents/TodayTransactionsByCashier.razor
+++ b/SupermarketManagement.WebApp/PageComponents/TodayTransactionsByCashier.razor
@@ -23,15 +23,15 @@
                     <td>@item.QtyBefore</td>
                     <td>@item.QtySold</td>
                     <td>@(item.QtyBefore - item.QtySold)</td>
-                    <td>$@GetProductPrice(item.ProductId)</td>
-                    <td>$@item.Price</td>
+                    <td>$@string.Format("{0:N}", GetProductPrice(item.ProductId))</td>
+                    <td>$@string.Format("{0:N}", item.Price)</td>
                 </tr>
             }
         </tbody>
         <tfoot>
             <tr>
                 <th colspan="7" class="text-end pe-5">Total Amount:</th>
-                <th>$@(Transactions.Sum(t => t.Price))</th>
+                <th>$@string.Format("{0:N}", (Transactions.Sum(t => t.Price)))</th>
             </tr>
         </tfoot>
     }
