--- a/SupermarketManagement.WebApp/Pages/Index.razor
+++ b/SupermarketManagement.WebApp/Pages/Index.razor
@@ -5,7 +5,7 @@
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 fw-normal">Supermarket Management System</h1>
-      <p class="lead fw-normal">This is a study project with ASP.NET Core Blazor (server side), Entity Framework Core, SQL Server, Use case driven development and Clean Architecture. Also used ASP.NET Core Identity for Authentication and Authorization.</p>
+      <p class="lead fw-normal">This is a study project with ASP.NET Core Blazor (server side), Entity Framework Core, SQL Server, MySQL, Use case driven development and Clean Architecture. Also used ASP.NET Core Identity for Authentication and Authorization.</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
