Added information on Index page

--- a/SupermarketManagement.WebApp/Pages/Index.razor
+++ b/SupermarketManagement.WebApp/Pages/Index.razor
@@ -6,6 +6,7 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 fw-normal">Supermarket Management System</h1>
       <p class="lead fw-normal">This is a study project with ASP.NET Core Blazor (server side), Entity Framework Core, SQL Server, MySQL, Use case driven development and Clean Architecture. Also used ASP.NET Core Identity for Authentication and Authorization.</p>
+        <p class="lead fw-normal">(Created 3 accounts for testing: admin@test.com, bob@test.com, tom@test.com. Password for everyone: qweASD-123)</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
